create and get application groups
